# Poisson2D-SOR

./: CMakeLists.txt  README.md  compare_poisson_solutions.py  main.cpp
results/poisson_case_1/: performance_log.txt
results/poisson_case_2/: exact_values.txt  performance_log.txt  poisson_solution_circular.txt
src/: CircularGrid.cpp  CircularGrid.h  Functions.h  GridBase.h  PoissonSolver.cpp  PoissonSolver.h  RectangularGrid.cpp  RectangularGrid.h
